# backend-agmshops

./: .env.example  .gitignore  BACKEND_API_ENDPOINT.md  Dockerfile  FILE-STRUCTURE.md  README.md  check_tables.py  command.md  main.py  migration_add_columns.sql  migration_fix_schema.sql  migration_monnify_alignment.sql  pyproject.toml  tidb_schema.sql
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: auth.py  (+13 more)
app/core/: __init__.py  config.py  constants.py  exceptions.py  security.py
app/database/: __init__.py  base.py  connection.py  session.py
app/middleware/: __init__.py  cors.py  error_handler.py  logging.py  rate_limit.py
app/models/: __init__.py  bank_account.py  disbursement.py  order.py  otp_verification.py  payment.py  product.py  refresh_token.py  refund.py  store.py  user.py  user_settings.py
app/repositories/: __init__.py  base.py  order_repository.py  payment_repository.py  product_repository.py  store_repository.py  user_repository.py
app/schemas/: __init__.py  analytics.py  auth.py  bank_account.py  common.py  order.py  payment.py  product.py  store.py  upload.py  user.py
scripts/: add_currency_column.py  check_payment_schema.py  debug_payment.py  fix_payment_db_schema.py  test_monnify_dynamic_initialization.py  test_monnify_init_payment.py  test_monnify_integration.py  test_monnify_reserved_account.py  test_monnify_resolve.py  test_order_payment_persistence.py  test_sms.py
tests/: conftest.py  test_api_auth.py  test_api_health.py  test_helpers.py  test_schemas.py  test_security.py  test_upload_service.py  test_validators.py
(+29 files in other folders)
